--- a/EmployeeBlazor/Pages/Counter.razor
+++ b/EmployeeBlazor/Pages/Counter.razor
@@ -6,6 +6,8 @@
     </CascadingValue>
 </CascadingValue>
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="(()=> { dialog.show(); })">Click dIALOG</button>
+<DialogComponent @ref="dialog"></DialogComponent>
 
 
 @code {
@@ -18,4 +20,5 @@
         currentCount++;
         setCurrentCountToParent.InvokeAsync(currentCount);
     }
+    private DialogComponent dialog;
 }
