--- a/EmployeeBlazor/Shared/NavMenu.razor
+++ b/EmployeeBlazor/Shared/NavMenu.razor
@@ -27,6 +27,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Employee
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="employeeform">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Employee Form
+            </NavLink>
+        </li>
+        
     </ul>
 </div>
 
