--- a/EmployeeBlazor/Pages/EmployeeForm.razor
+++ b/EmployeeBlazor/Pages/EmployeeForm.razor
@@ -6,9 +6,9 @@
         <input class="input" type="text" placeholder="Name input">
     </NameInput>
 </RenderComponentForm>
-<RenderComponentForm NameLabel="User Name">
+<RenderComponentForm NameLabel="Email">
     <NameInput>
-        <input class="input" type="text" placeholder="User Name input">
+        <input class="input" type="email" placeholder="emailinput">
     </NameInput>
 </RenderComponentForm>
 @code {
