--- a/EmployeeBlazor/Shared/NavMenu.razor
+++ b/EmployeeBlazor/Shared/NavMenu.razor
@@ -32,7 +32,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Employee Form
             </NavLink>
         </li>
-        
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="grocery">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Grocery
+            </NavLink>
+        </li>
+
     </ul>
 </div>
 
