--- a/EmployeeBlazor/Shared/NavMenu.razor
+++ b/EmployeeBlazor/Shared/NavMenu.razor
@@ -42,6 +42,17 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Cement
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="onafterRenderPage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> On after Render
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="formvalidation">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Form validation
+            </NavLink>
+        </li>
+        
     </ul>
 </div>
 
