Dynamic column datagrid

--- a/DataGridBlazor/_Imports.razor
+++ b/DataGridBlazor/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using DataGridBlazor
 @using DataGridBlazor.Shared
+@using DataGridBlazor.Controls
+@using DataGridBlazor.Configuration
