--- a/DataGridBlazor/Pages/Index.razor
+++ b/DataGridBlazor/Pages/Index.razor
@@ -1,7 +1,47 @@
 ﻿@page "/"
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<DataGridComponent TItem="Employee" DataItems="employees" Columns="columnDefinitions"></DataGridComponent>
+@code{
+    private List<Employee> employees;
+    private List<ColumnDefinition> columnDefinitions;
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+        Initilize();
+    }
+    private void Initilize()
+    {
+        if(columnDefinitions==null)
+        {
+            columnDefinitions = new List<ColumnDefinition>();
+            columnDefinitions.AddRange(
+                new ColumnDefinition[]
+                {
+                        new ColumnDefinition {DataField="Name",Caption="Name"},
+                        new ColumnDefinition {DataField="Title",Caption="Title"},
+                        new ColumnDefinition {DataField="Department",Caption="Department"},
+                        new ColumnDefinition {DataField="EmployementDate",Caption="Employement Date",Format="yyyy/MM/dd", DataType=DataType.DateTime},
+                        new ColumnDefinition {DataField="Salary",Caption="Annual Salary",Alignment=Alignment.Right, DataType=DataType.Currency,Format="c"},
+                });
+        }
+        if(employees==null)
+        {
+            employees = new List<Employee>();
+            employees.AddRange(
+                new Employee[]
+                {
+                    new Employee{Name="Ahmad Shihab Saadi",Title="Software Developer",Department="CRM",EmployementDate=DateTime.Now,Salary=32000},
+                    new Employee{Name="A.F. Rayhan",Title="Executive",Department="CRM",EmployementDate=DateTime.Now,Salary=35000},
+                    new Employee{Name="Md Nazrul Islam",Title="Executive",Department="CRM",EmployementDate=DateTime.Now,Salary=35000}
+                }
+                );
+        }
+    }
+    class Employee
+    {
+        public string Name { get; set; }
+        public string Title { get; set; }
+        public string Department { get; set; }
+        public DateTime EmployementDate { get; set; }
+        public int Salary { get; set; }
+    }
+}
