--- a/DataGridBlazor/Pages/_Host.cshtml
+++ b/DataGridBlazor/Pages/_Host.cshtml
@@ -13,6 +13,8 @@
     <title>DataGridBlazor</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link href="css/bulma/bulma.min.css" rel="stylesheet" />
+    <link href="css/bulma/bulmaOverride.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="DataGridBlazor.styles.css" rel="stylesheet" />
 </head>
