--- a/EmployeeWebClient/Shared/NavMenu.razor
+++ b/EmployeeWebClient/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">DataGridBlazor</a>
+    <a class="navbar-brand" href="">EmployeeWebClient</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,8 +18,13 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="WeatherForecastList">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Weather Forecast List
+            <NavLink class="nav-link" href="fetchdata">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="WeatherForecast">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> WeatherForecast
             </NavLink>
         </li>
     </ul>
